[Feat] style - make sure file item hovering do not overlap entire tree focus effect

--- a/src/workbench/services/fileTree/media.scss
+++ b/src/workbench/services/fileTree/media.scss
@@ -2,7 +2,6 @@
 .file-tree.focused {
     outline-offset: -1px;
     outline: 1px solid #cf6060;
-    z-index: 9999;
 }
 
 .file-tree.on-drop-target {
